fix: spacing of the navbar

--- a/src/style/components/_navbar.scss
+++ b/src/style/components/_navbar.scss
@@ -5,7 +5,7 @@
 
 	display: flex;
 	flex-direction: row;
-	align-content: space-between;
+	justify-content: space-between;
 
 	position: fixed;
 	top: 0;
@@ -14,7 +14,6 @@
 	z-index: 1030;
 
 	.title {
-		// align-self: flex-start;
 		margin-inline-start: 1rem;
 
 		font-family: 'Anonymous Pro', 'Courier New', Courier, monospace;
@@ -28,7 +27,6 @@
 	}
 
 	.language {
-		// align-self: flex-end;
 		margin-inline-end: 1rem;
 		font-size: 1.4em;
 		line-height: 1.4em;
